# custom_rtos_attempt

./: README.md  tags
interrupts/: CMakeCache.txt  Makefile  cmake_install.cmake  configure.sh  cstubs.c  interrupt.cbp  rpi-gpio.h  rpi-interrupts.c  rpi-interrupts.h  rpi-systimer.h  start.S
ledblink/: build.sh  ledblink.c
ledblink_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  configure.sh  cstubs.c  kernel  ledblink.c  rpi-systimer.h  rtos-build.cbp  start.S  startup.c  toolchain-arm-none-eabi-rpi.cmake
ledblink_for_lpc1343/: build.sh  linkerscript.ld  lpcstartup.c
ledblink_with_init/: build.sh  ledblink.c  rpi_gpio.h  start.S
scheduler/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interrupt.cbp  ledblink.c  requirements.txt  rpi-armtimer.h  rpi-base.h  rpi-gpio.c  rpi-sched.c  rpi-sched.h  rpi-systimer.c  rpi.x  toolchain-arm-none-eabi-rpi.cmake
support_for_malloc/: build.sh  cstubs.c  ledblink.c  rpi-gpio.h  rpi.x  startup.c
